--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -2,15 +2,68 @@
 @{
     ViewBag.Title = "Sport Search";
 }
+<div class="navbar-header">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span onclick="openNav()">Filter</span>
+
+    </button>
+</div>
+
+<div class="collapse navbar-collapse">
+    <!-- search form -->
+    <div class="col-md-10 col-md-offset-2 ">
+        <form class="form-inline">
+            <div class="form-group ">
+                <label for="School" class="sr-only">School</label>
+                <input type="text" class="form-control" placeholder="School">
+            </div>
+            <div class="form-group">
+                <label for="Name" class="sr-only">Name</label>
+                <input type="text" class="form-control" placeholder="Name">
+            </div>
+            <div class="form-group">
+                <label for="Year" class="sr-only">Year</label>
+                <input type="text" class="form-control" placeholder="Year">
+            </div>
+            <button type="submit" class="btn btn-primary">Search</button>
+        </form>
+    </div>
+</div>
+<br />
 
 <div class="col-md-2">
 
     <div class="row collapse navbar-collapse">
         <!-- filter start -->
+        
 
-       @Html.Partial("_SearchForm")
+        <form>
+            <h3>Filter By Sport</h3>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox"> Check me out
+                </label>
+            </div>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox"> Check me out
+                </label>
+            </div>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox"> Check me out
+                </label>
+            </div>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox"> Check me out
+                </label>
+            </div>
 
+        </form>
         <form class="row form-inline">
+
             <h3>filter by sport</h3>
             <div class="form-group ">
                 <label for="School" class="sr-only">School</label>
@@ -78,3 +131,89 @@
     </table>
 
 </div>
+
+
+<!--slide menu start-->
+<div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    @Html.Partial("_SearchForm")
+    <div class="row">
+        <!-- filter start -->
+        <div class="col-md-12 col-xs-12">
+
+            <div class="col-xs-10">
+                <h3>Filter By Sport</h3>
+
+                <form>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Check me out
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Check me out
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Check me out
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Check me out
+                        </label>
+                    </div>
+
+                </form>
+            </div>
+
+            <div class="col-xs-10">
+                <h3>more filter</h3>
+
+                <form class="form-inline">
+
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Check me out
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Check me out
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Check me out
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> Check me out
+                        </label>
+                    </div>
+
+                </form>
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
+<!--slide menu end-->
+
+<script>
+    /* Set the width of the side navigation to 250px */
+    function openNav() {
+        document.getElementById("mySidenav").style.width = "250px";
+    }
+
+    /* Set the width of the side navigation to 0 */
+    function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+    }
+</script>
+
