--- a/OCRC/Views/Home/_SearchForm.cshtml
+++ b/OCRC/Views/Home/_SearchForm.cshtml
@@ -1,26 +1,17 @@
 ﻿<!-- search form -->
-<form>
-    <h3>filter by sport</h3>
-    <div class="checkbox">
-        <label>
-            <input type="checkbox"> Check me out
-        </label>
+<form class="form-inline col-xs-10">
+    <div class="form-group ">
+        <label for="School" class="sr-only">School</label>
+        <input type="text" class="form-control" placeholder="School">
     </div>
-    <div class="checkbox">
-        <label>
-            <input type="checkbox"> Check me out
-        </label>
+    <div class="form-group">
+        <label for="Name" class="sr-only">Name</label>
+        <input type="text" class="form-control" placeholder="Name">
     </div>
-    <div class="checkbox">
-        <label>
-            <input type="checkbox"> Check me out
-        </label>
+    <div class="form-group">
+        <label for="Year" class="sr-only">Year</label>
+        <input type="text" class="form-control" placeholder="Year">
     </div>
-    <div class="checkbox">
-        <label>
-            <input type="checkbox"> Check me out
-        </label>
-    </div>
-
+    <button type="submit" class="btn btn-primary">Search</button>
 </form>
 <!-- search form end -->
