--- a/OCRC/Views/Shared/_Layout.cshtml
+++ b/OCRC/Views/Shared/_Layout.cshtml
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>@ViewBag.Title -Ogdent City</title>
+    @Styles.Render("~/Content/Site.css")
     @Styles.Render("~/Content/bootstrap.min.css")
     @Styles.Render("~/Content/slideMenu.css")
+   
     @Scripts.Render("~/bundles/modernizr")
 
 
@@ -22,7 +24,7 @@
 
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="background-color:#f9f9f9">
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -34,11 +36,7 @@
                         <span class="icon-bar"></span>
 
                     </button>
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span onclick="openNav()">Filter</span>
-
-                    </button>
+                    
 
                     <a class="navbar-brand" href="#">Ogden City</a>
                 </div>
@@ -62,101 +60,10 @@
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
-        <div class="collapse navbar-collapse">
-            <!-- search form -->
-            <div class="col-md-10 col-md-offset-2 ">
-                <form class="form-inline">
-                    <div class="form-group ">
-                        <label for="School" class="sr-only">School</label>
-                        <input type="text" class="form-control" placeholder="School">
-                    </div>
-                    <div class="form-group">
-                        <label for="Name" class="sr-only">Name</label>
-                        <input type="text" class="form-control" placeholder="Name">
-                    </div>
-                    <div class="form-group">
-                        <label for="Year" class="sr-only">Year</label>
-                        <input type="text" class="form-control" placeholder="Year">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Search</button>
-                </form>
-            </div>
-        </div>
-        <br />
-        <!--slide menu start-->
-        <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            @Html.Partial("../Home/_SearchForm")
-            <div class="row">
-                <!-- filter start -->
-                <div class="col-md-12 col-xs-12">
-
-                    <div class="col-xs-12">
-                        <h3>Filter By Sport</h3>
-
-                        <form>
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox"> Check me out
-                                </label>
-                            </div>
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox"> Check me out
-                                </label>
-                            </div>
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox"> Check me out
-                                </label>
-                            </div>
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox"> Check me out
-                                </label>
-                            </div>
-
-                        </form>
-                    </div>
-
-                    <div class="col-xs-12">
-                        <h3>more filter</h3>
-
-                        <form class="form-inline">
-
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox"> Check me out
-                                </label>
-                            </div>
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox"> Check me out
-                                </label>
-                            </div>
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox"> Check me out
-                                </label>
-                            </div>
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox"> Check me out
-                                </label>
-                            </div>
-
-                        </form>
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
-        <!--slide menu end-->
+        
         <!-- header -->
 
-        <div class="container">
+        <div class="container" >
             @RenderBody()
         </div>
         <div class="container">
@@ -171,17 +78,7 @@
     @Scripts.Render("~/bundles/bootstrap")
 
     @RenderSection("scripts", required: false)
-    <script>
-        /* Set the width of the side navigation to 250px */
-        function openNav() {
-            document.getElementById("mySidenav").style.width = "250px";
-        }
-
-        /* Set the width of the side navigation to 0 */
-        function closeNav() {
-            document.getElementById("mySidenav").style.width = "0";
-        }
-    </script>
+    
 
 
 
