--- a/OCRC/Views/Account/RegisterUser.cshtml
+++ b/OCRC/Views/Account/RegisterUser.cshtml
@@ -1,26 +1,29 @@
-﻿
+﻿@model OCRC.Models.User
 @{
     ViewBag.Title = "RegisterUser";
 }
 
 
+@using (Html.BeginForm("RegisterUser", "Account", FormMethod.Post))
+{ 
 <div class="col-xs-12 col-md-12">
     <h3>Register New User</h3>
     <form class="col-xs-12 col-md-4 col-md-offset-3">
         <div class="form-group">
-            <label for="exampleInputEmail1">Last Name</label>
-            <input type="text" class="form-control" placeholder="Last Name">
+           @Html.LabelFor(model => model.fname, new { htmlAttributes = new { @class = "control-label" } })
+           @Html.EditorFor(model => model.fname, new { htmlAttributes = new { @class = "form-control", @placeholder = "First Name" } })
+          
         </div>
         <div class="form-group">
-            <label for="exampleInputPassword1">First Name</label>
-            <input type="text" class="form-control" placeholder="First Name">
+            @Html.LabelFor(model => model.lname, new { htmlAttributes = new { @class = "control-label" } })
+            @Html.EditorFor(model => model.lname, new { htmlAttributes = new { @class = "form-control" , @placeholder ="Last Name"} })
         </div>
         <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+            @Html.LabelFor(model => model.email, new { htmlAttributes = new { @class = "control-label" } })
+            @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control", @placeholder = "example@example.com" } })
         </div>
         <div class="form-group">
-            <label for="exampleInputPassword1">Role</label><br>
+          <!--  <label for="exampleInputPassword1">Role</label><br>
             <label class="checkbox-inline">
                 <input type="checkbox" value="">Admit
             </label>
@@ -33,12 +36,27 @@
             <label class="checkbox-inline">
                 <input type="checkbox" value="">School
             </label>
-            
+            -->
+            <label class="checkbox-inline">
+                @Html.CheckBoxFor(model => model.role[0], new { @class = "checkbox" }) Admin
+            </label>
+            <label class="checkbox-inline">
+                @Html.CheckBoxFor(model => model.role[1], new { @class = "checkbox"}) Clerk
+            </label>
+            <label class="checkbox-inline">
+                @Html.CheckBoxFor(model => model.role[2], new { @class = "checkbox" }) Coach
+            </label>
+            <label class="checkbox-inline">
+                @Html.CheckBoxFor(model => model.role[3], new { @class = "checkbox" }) School
+            </label>
 
         </div>
+
+
         <div class="form-group">
-            <label for="exampleInputPassword1">Team</label>
-            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Team">
+            @Html.LabelFor(model => model.password, new { htmlAttributes = new { @class = "control-label" } })
+            @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control", @placeholder = "Password" } })
+            
         </div>
         <div class="form-group">
             <label for="exampleInputEmail1">School</label>
@@ -49,4 +67,4 @@
         <button type="submit" class="btn btn-default">Submit</button>
     </form>
 </div>
-
+}
