--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -1,4 +1,5 @@
 ﻿
+
 @{
     ViewBag.Title = "Sport Search";
 }
@@ -36,42 +37,41 @@
 
     <div class="row collapse navbar-collapse">
         <!-- filter start -->
-        
+
 
         <form>
             <h3>Filter By Sport</h3>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox"> Check me out
-                </label>
-            </div>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox"> Check me out
-                </label>
-            </div>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox"> Check me out
-                </label>
-            </div>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox"> Check me out
-                </label>
-            </div>
+            @foreach (var item in Model)
+            {
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox"> @item.sportName
+                    </label>
+                </div>
+            }
+
+
 
         </form>
         <form class="row form-inline">
 
             <h3>More Filter</h3>
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Grade <span class="caret"></span>
-            </button>
-            
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Age <span class="caret"></span>
-            </button>
+            <select class="form-control">
+                <option value="Grade">Grade</option>
+                
+                @for (int i = 1; i < 14; i++)
+                {
+                    <option value="@i">@i th</option>
+                }
+            </select>
+
+            <select class="form-control">
+                <option value="Age">Age</option>
+                @for (int i = 5; i < 20; i++)
+                {
+                    <option value="@i">@i</option>
+                }
+            </select>
             <br />
             <br />
             <button type="submit" class="btn btn-primary">Search</button>
@@ -132,43 +132,42 @@
         <div class="col-md-12 col-xs-12">
 
             <div class="col-xs-10">
-                
+
 
                 <form>
                     <h3>Filter By Sport</h3>
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> Check me out
-                        </label>
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> Check me out
-                        </label>
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> Check me out
-                        </label>
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> Check me out
-                        </label>
-                    </div>
+                    @foreach (var item in Model)
+                    {
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox"> @item.sportName
+                            </label>
+                        </div>
+                    }
+
+
 
                 </form>
 
                 <form>
 
                     <h3>More Filter</h3>
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Grade <span class="caret"></span>
-                    </button>
+                    <select class="form-control">
+                        <option value="Grade">Grade</option>
 
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Age <span class="caret"></span>
-                    </button>
+                        @for (int i = 1; i < 14; i++)
+                        {
+                            <option value="@i">@i th</option>
+                        }
+                    </select>
+
+                    <select class="form-control">
+                        <option value="Age">Age</option>
+                        @for (int i = 5; i < 20; i++)
+                        {
+                            <option value="@i">@i</option>
+                        }
+                    </select>
                     <br />
                     <br />
                     <button type="submit" class="btn btn-primary">Search</button>
@@ -176,7 +175,7 @@
                 </form>
             </div>
 
-            
+
 
         </div>
 
