--- a/OCRC/Views/Account/UserList.cshtml
+++ b/OCRC/Views/Account/UserList.cshtml
@@ -9,6 +9,8 @@
         <div class="panel panel-default user_panel">
             <div class="panel-heading">
                 <h3 class="panel-title">User List</h3>
+
+                <span role="presentation">@Html.ActionLink("Register user", "RegisterUser", "Account")</span>
             </div>
             <div class="panel-body">
                 <div class="table-container">
