--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -90,11 +90,12 @@
                 <th scope="col">First Name</th>
                 <th scope="col">Last Name</th>
                 <th scope="col">Year</th>
+                <th scope="col">Rank</th>
             </tr>
         </thead>
         <tbody>
         @{ int num = 1;}
-      @foreach (var item in Model.searches)
+      @foreach (var item in Model.allOfThem)
       {
           
             <tr>
@@ -102,6 +103,7 @@
                 <td>@item.fname</td>
                 <td>@item.lname</td>
                 <td>@item.year</td>
+                <td>@item.rank[0].rank</td>
             </tr>
                         
          }
