--- a/OCRC/Views/Account/ResetPassword.cshtml
+++ b/OCRC/Views/Account/ResetPassword.cshtml
@@ -14,8 +14,7 @@
         <legend>Resetting password form</legend>
         <ol>
             <li>
-                @Html.LabelFor(m => m.Password)
-                @Html.PasswordFor(m => m.Password)
+                
             </li>
             <li>
                 @Html.LabelFor(m => m.ConfirmPassword)
@@ -26,4 +25,6 @@
         <input type="submit" value="Reset" />
     </fieldset>
     <h2>@ViewBag.Message</h2>
+
+    @Html.HiddenFor(m => m.ReturnToken)
 }
