--- a/OCRC/Views/Account/ResetPassword.cshtml
+++ b/OCRC/Views/Account/ResetPassword.cshtml
@@ -14,7 +14,8 @@
         <legend>Resetting password form</legend>
         <ol>
             <li>
-                
+                @Html.LabelFor(m => m.Password)
+                @Html.PasswordFor(m => m.Password)
             </li>
             <li>
                 @Html.LabelFor(m => m.ConfirmPassword)
