--- a/OCRC/Views/Account/ResetPassword.cshtml
+++ b/OCRC/Views/Account/ResetPassword.cshtml
@@ -4,28 +4,45 @@
     ViewBag.Title = "ResetPassword";
 }
 
-<h2>Reset Password</h2>
 
-@using (Html.BeginForm())
-{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
-    <fieldset>
-        <legend>Resetting password form</legend>
-        <ol>
-            <li>
-                @Html.LabelFor(m => m.Password)
-                @Html.PasswordFor(m => m.Password)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.ConfirmPassword)
-                @Html.PasswordFor(m => m.ConfirmPassword)
-            </li>
-            @Html.HiddenFor(m => m.ReturnToken)
-        </ol>
-        <input type="submit" value="Reset" />
-    </fieldset>
-    <h2>@ViewBag.Message</h2>
+    <div class="container">
+        <div id="passwordreset" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                    <div class="panel-title">Create New Password</div>
+                </div>
+                <div class="panel-body">
+                    <form id="signupform" class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <label for="email" class=" control-label col-sm-3">Registered email</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id ="email" name="email" placeholder="Please input your email used to register with us">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="email" class=" control-label col-sm-3">New password</label>
+                            <div class="col-sm-9">
+                                <input type="password" class="form-control" id="Password" name="Password" placeholder="create your new password">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="email" class=" control-label col-sm-3">Confirm password</label>
+                            <div class="col-sm-9">
+                                <input type="password" class="form-control" id="ConfirmPassword" name="ConfirmPassword" placeholder="confirm your new password">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <!-- Button -->
+                            <div class="  col-sm-offset-3 col-sm-9">
+                                <button id="btn-signup" type="button" class="btn btn-success">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    @Html.HiddenFor(m => m.ReturnToken)
-}
+@Html.HiddenFor(m => m.ReturnToken)
