--- a/OCRC/Views/Account/ResetPassword.cshtml
+++ b/OCRC/Views/Account/ResetPassword.cshtml
@@ -3,46 +3,35 @@
 @{
     ViewBag.Title = "ResetPassword";
 }
-
+@using (Html.BeginForm())
+{
 
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
     <div class="container">
-        <div id="passwordreset" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-            <div class="panel panel-info">
-                <div class="panel-heading">
-                    <div class="panel-title">Create New Password</div>
-                </div>
-                <div class="panel-body">
-                    <form id="signupform" class="form-horizontal" role="form">
-                        <div class="form-group">
-                            <label for="email" class=" control-label col-sm-3">Registered email</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" id ="email" name="email" placeholder="Please input your email used to register with us">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="email" class=" control-label col-sm-3">New password</label>
-                            <div class="col-sm-9">
-                                <input type="password" class="form-control" id="Password" name="Password" placeholder="create your new password">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="email" class=" control-label col-sm-3">Confirm password</label>
-                            <div class="col-sm-9">
-                                <input type="password" class="form-control" id="ConfirmPassword" name="ConfirmPassword" placeholder="confirm your new password">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <!-- Button -->
-                            <div class="  col-sm-offset-3 col-sm-9">
-                                <input id="btn-signup" type="submit" class="btn btn-success" value="Submit">
-                            </div>
-                        </div>
-                    </form>
-                </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="text-center">Reset Password</h3>
+                <hr />
+                <form>
+                    <div class="form-group">
+                        <label>Enter Email:</label>
+                        <input type="text" id="email"name ="email"class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label>Change Password :</label>
+                        <input type="password" id="Password"name ="Password" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label>Confirm Password :</label>
+                        <input type="password" id="ConfirmPassword"name ="ConfirmPassword"class="form-control" />                     
+                    </div>
+                    <button class="btn btn-primary btn-sm center-block">
+                        Submit
+                    </button>
+                </form>
             </div>
         </div>
     </div>
-
-@Html.HiddenFor(m => m.ReturnToken)
+    @Html.HiddenFor(m => m.ReturnToken)
+}
