--- a/OCRC/Views/Account/ResetPassword.cshtml
+++ b/OCRC/Views/Account/ResetPassword.cshtml
@@ -19,12 +19,12 @@
                         <input type="text" id="email"name ="email"class="form-control" />
                     </div>
                     <div class="form-group">
-                        <label>Change Password :</label>
-                        <input type="password" id="Password"name ="Password" class="form-control" />
+                        <label>Old Password :</label>
+                        <input type="password" id="oldPassword"name ="oldPassword" class="form-control" />
                     </div>
                     <div class="form-group">
-                        <label>Confirm Password :</label>
-                        <input type="password" id="ConfirmPassword"name ="ConfirmPassword"class="form-control" />                     
+                        <label>New Password :</label>
+                        <input type="password" id="NewPassword"name ="NewPassword"class="form-control" />                     
                     </div>
                     <button class="btn btn-primary btn-sm center-block">
                         Submit
