--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -80,118 +80,79 @@
     </div>
 
 </div>
-
 <div class="col-md-10 col-sm-12 col-xs-12">
-
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">First Name</th>
-                <th scope="col">Last Name</th>
-                <th scope="col">Year</th>
-                <th scope="col">Rank</th>
-                <th scope="col">Age</th>
-                <th scope="col">School</th>
-                <th scope="col">Grade</th>
-                
-            </tr>
-        </thead>
-        <tbody>
-        @{ int num = 1;}
-      @foreach (var item in Model.allOfThem)
-      {
-          
-            <tr>
-                <th scope="row">@num</th>@{num++;}
-                <td>@item.fname</td>
-                <td>@item.lname</td>
-                <td>@item.year</td>
-                <td>@item.rank[0].rank</td>
-                <td>@item.age</td>
-                <td>@item.school</td>
-                <td>@item.grade</td>
-                
-
-            </tr>
-                        
-         }
-        </tbody>
-    </table>
-
+    @Html.Partial("~/Views/Shared/ResultPartial.cshtml", OCRC.Models.SearchViewModel.getSearchViewModel());
 </div>
+    <!--slide menu start-->
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        @Html.Partial("_SearchForm")
+        <div class="row">
+            <!-- filter start -->
+            <div class="col-md-12 col-xs-12">
+
+                <div class="col-xs-10">
 
 
-<!--slide menu start-->
-<div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    @Html.Partial("_SearchForm")
-    <div class="row">
-        <!-- filter start -->
-        <div class="col-md-12 col-xs-12">
-
-            <div class="col-xs-10">
-
-
-                <form>
-                    <h3>Filter By Sport</h3>
-                    @foreach (var item in Model.sports)
-                    {
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> @item.sportName
-                            </label>
-                        </div>
-                    }
-
-
-
-                </form>
-
-                <form>
-
-                    <h3>More Filter</h3>
-                    <select class="form-control">
-                        <option value="Grade">Grade</option>
-
-                        @for (int i = 1; i < 14; i++)
+                    <form>
+                        <h3>Filter By Sport</h3>
+                        @foreach (var item in Model.sports)
                         {
-                            <option value="@i">@i th</option>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox"> @item.sportName
+                                </label>
+                            </div>
                         }
-                    </select>
 
-                    <select class="form-control">
-                        <option value="Age">Age</option>
-                        @for (int i = 5; i < 20; i++)
-                        {
-                            <option value="@i">@i</option>
-                        }
-                    </select>
-                    <br />
-                    <br />
-                    <button type="submit" class="btn btn-primary">Search</button>
 
-                </form>
+
+                    </form>
+
+                    <form>
+
+                        <h3>More Filter</h3>
+                        <select class="form-control">
+                            <option value="Grade">Grade</option>
+
+                            @for (int i = 1; i < 14; i++)
+                            {
+                                <option value="@i">@i th</option>
+                            }
+                        </select>
+
+                        <select class="form-control">
+                            <option value="Age">Age</option>
+                            @for (int i = 5; i < 20; i++)
+                            {
+                                <option value="@i">@i</option>
+                            }
+                        </select>
+                        <br />
+                        <br />
+                        <button type="submit" class="btn btn-primary">Search</button>
+
+                    </form>
+                </div>
+
+
+
             </div>
-
-
 
         </div>
 
     </div>
+    <!--slide menu end-->
 
-</div>
-<!--slide menu end-->
+    <script>
+        /* Set the width of the side navigation to 250px */
+        function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+        }
 
-<script>
-    /* Set the width of the side navigation to 250px */
-    function openNav() {
-        document.getElementById("mySidenav").style.width = "250px";
-    }
-
-    /* Set the width of the side navigation to 0 */
-    function closeNav() {
-        document.getElementById("mySidenav").style.width = "0";
-    }
-</script>
+        /* Set the width of the side navigation to 0 */
+        function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+        }
+    </script>
 
